# cgotest

./: .gitignore  CMakeLists.txt  README.md
bindings/go/: Makefile  PRESENTATION.md  TEST.code  main.go
bindings/go/qrcode/: cfuncs.go  qrcode.go
bindings/rust/: build.rs  rust.md
bindings/zig/: README.md  build.zig
bindings/zig/src/: main.zig
crusttest/: Cargo.toml  build.rs
crusttest/src/: main.rs
go/: README.md  go.mod
go/cmd/: root.go
go/qrcode/: qrcode.go
include/: interface.h
src/: interface.cpp  main.cpp
